fixed stripe z-index #139

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -82,7 +82,7 @@ body {
 .stripe {
   height: .3125em;
   width: 100%;
-  z-index: 1000;
+  z-index: 100;
 }
 .stripe .stripe_all {
   float: left;
